centered index main to fix overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,32 +41,27 @@ a.category:hover, a.sub-link:hover {
 }
 
 
-
-
-
-
 /* Homepage */
 
 
 #index {
-  position: absolute;
-  top: 7%;
-  left: 6%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
 }
 
-/*
-div.grid-wrapper {
+div.index-wrapper {
   display: flex;
-  align-items: start;
-  justify-content: left;
-  height: 100vh;
+  justify-content: center;
   width: 100vw;
-}*/
+}
+
 
 main.homepage {
   display: grid;
   grid-template-columns: repeat(12, 3.67rem);
-  grid-template-rows: auto 3rem repeat(4, 4.25rem);
+  grid-template-rows: repeat(7, 4rem);
   column-gap: 1rem;
   row-gap: 1rem;
 }
@@ -301,7 +296,7 @@ svg {
 }
   
   .icon {
-    width: 26rem;
+    width: 25rem;
   }
   
   .expand-link {
